--- a/source/css/_homepage.css
+++ b/source/css/_homepage.css
@@ -3,12 +3,14 @@ body {
 }
 
 #head {
+  padding: 0 2rem;
   margin: var(--component-spacing-big) 0;
 }
 
 #head img {
   width: 24rem;
-  vertical-align: middle;
+  margin: 0 auto;
+  display: block;
 }
 
 #wrap {
@@ -28,6 +30,10 @@ pre code {
 }
 
 @media (max-width: 60rem) {
+  #head {
+    padding: 0 1rem;
+  }
+
   #wrap {
     padding: 0 1rem;
     display: block;
